--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,38 @@
+nav {
+    background-color: steelblue;
+    padding: 10px;
+}
+
+nav a {
+    color: white;
+    padding: 10px;
+    display: block;
+}
+
+h1 {
+    color: steelblue;
+    padding: .5em;
+}
+
 main {
     max-width: 849px;
 }
+
 main img{
     width: 150px;
     height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
-aside{
+main p{
+    min-height: 200px;
+}
+
+aside {
     width: 20rem;
     margin: 1rem;
     border: 1px solid rgba(0,0,0,0.2);
@@ -14,6 +40,18 @@ aside{
     background-color: #eee;
     color: #333;
     text-align: center;
+    position: relative;
+}
+
+aside img{
+    width: 200px;
+    height: auto;
+}
+
+aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 150px;
 }
 
 p { padding: 0;}
@@ -22,4 +60,20 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Class Selectors*/
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
 }
