--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -31,6 +31,13 @@ h1, h2, h3, h4, h5, h6 {
 header {
     padding: 20px;
     background-color: var(--accent1-color);
+    height: 100px;
+    align-content: center;
+}
+
+header img {
+    height: 80px;
+    float: left;
 }
 
 p {
@@ -43,6 +50,12 @@ nav {
     display: flex;
 }
 
+nav a {
+    margin: 1em;
+    border: 1px solid var(--lprimary-color);
+    background-color: var(--secondary-color);
+}
+
 nav a:link, nav a:visited {
     color: var(--nav-link-color)
 }
@@ -50,4 +63,48 @@ nav a:link, nav a:visited {
 nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
+}
+
+/* Class Selectors*/
+
+.hero img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.hero div {
+    position: relative;
+}
+
+.hero h1 {
+    top: 280px;
+    left: 70px;
+    position: absolute;
+    color: #fff;
+    z-index: 1;
+}
+
+.hero article {
+    top: 300px;
+    max-width: 920px;
+    position: absolute;
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 20px;
+    opacity: 0.8;
+}
+
+.hero article img {
+    width: 300px;
+    height: auto;
+    border: 1px solid var(--accent1-color);
+    padding: 2px;
+    float: right;
+    margin: 0 0 1rem 1rem;
+    opacity: 1;
+}
+
+* {
+    max-width: 1200px;
 }
