--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,30 @@
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     padding: 10px;
-    display: block;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
 }
 
 h1 {
     color: steelblue;
     padding: .5em;
+    border-bottom: 1px solid steelblue;
 }
 
 main {
     max-width: 849px;
+    grid-column:  2/3;
+    margin: 1rem;
 }
 
 main img{
@@ -28,10 +37,6 @@ main img{
     margin: 0 0 1rem 1rem;
 }
 
-main p{
-    min-height: 200px;
-}
-
 aside {
     width: 20rem;
     margin: 1rem;
@@ -41,6 +46,8 @@ aside {
     color: #333;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img{
@@ -56,10 +63,11 @@ aside h2 {
 
 p { padding: 0;}
 
-footer {
-    margin-top: 15px;
+header, footer, .grid {
+    margin-top: 0 auto;
     border-top: 1px solid #000;
     text-align: center;
+    max-width: 840px;
 }
 
 * {
@@ -75,5 +83,10 @@ footer {
     border: 1px solid rgba(0, 0, 0, .1);
     padding: 1rem;
     background-color: #ddd;
-    color: #000;
+    color: #000000;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
